--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "web-dev-server",
   "version": "1.0.0",
   "description": "Node.js HTTP Web Server for the Tuiter application",
@@ -21,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/klaidaazizi/web-dev-server/issues"
   },
-  "homepage": "https://github.com/klaidaazizi/web-dev-server#readme"
+  "homepage": "https://github.com/klaidaazizi/web-dev-server#readme",
+  "dependencies": {
+    "axios": "^0.26.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.3"
+  }
 }
